--- a/linearized_discourse/templates/index.html
+++ b/linearized_discourse/templates/index.html
@@ -5,70 +5,73 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Input and Output Textbox</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/spin.js/2.3.2/spin.min.js"></script>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            margin: 20px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            background-color: #688897;
-            padding: 20px;
-        }
+    font-family: Arial, sans-serif;
+    text-align: center;
+    margin: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #688897;
+    padding: 20px;
+}
 
-        h1 {
-            margin-bottom: 20px;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            font-weight: bold;
-            color: #bcdda0;
-        }
+h1 {
+    margin-bottom: 20px;
+    margin-top: -15px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: bold;
+    color: #bcdda0;
+}
 
-        #container {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-between;
-            align-items: stretch;
-            gap: 20px;
-            width: 100%;
-            box-sizing: border-box;
-        }
+#container {
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: stretch;
+    gap: 10px;
+    width: 100%;
+    box-sizing: border-box;
+}
 
-        .textbox-container {
-            flex: 1;
-            box-sizing: border-box;
-            max-width: 48%;
-            background-color: #fff;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            padding: 20px;
-            font-family: 'Courier New', Courier, monospace;
-            color: #020e44;
-            margin-bottom: 20px;
-        }
+.textbox-container {
+    flex: 1;
+    box-sizing: border-box;
+    max-width: 48%;
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    font-family: 'Courier New', Courier, monospace;
+    color: #020e44;
+    margin-bottom: 5px;
+}
 
-        textarea {
-            width: calc(100% - 20px);
-            height: 100px;
-            font-size: 1.7em;
-            box-sizing: border-box;
-            margin-bottom: 15px;
-            border: 1px solid #ccc;
-            border-radius: 8px;
-            padding: 10px;
-        }
+textarea {
+    width: 100%;
+    height: 100px;
+    font-size: 1.7em;
+    box-sizing: border-box;
+    margin-bottom: 5px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    padding: 10px;
+}
 
-        label {
-            display: block;
-            margin-bottom: 10px;
-        }
+label {
+    display: block;
+    margin-bottom: 10px;
+}
 
-        button {
+button {
     font-size: 1.2em;
     padding: 1em;
     height: 36%;
-    padding: 20px;
-    width: calc(100% - 85%);
+    padding: 12px;
+    width: calc(100% - 90%);
     background-color: #74da74;
     color: #000000;
     align-items: center;
@@ -81,79 +84,91 @@
     outline: none;
 }
 
-        button:hover {
-            background-color: #45a049 !important;
-        }
+button:hover {
+    background-color: #45a049 !important;
+}
 
-        #output {
-            margin-top: 20px;
-        }
+#output {
+    margin-top: 20px;
+}
 
+#discourseOutputContainer {
+    flex: 1;
+    box-sizing: border-box;
+    width: 100%;
+    max-width: 68%;
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    font-family: 'Courier New', Courier, monospace;
+    color: #020e44;
+    margin-top: 10px;
+}
 
-        #discourseOutputContainer {
-            flex: 1;
-            box-sizing: border-box;
-            width: 100%;
-            max-width: 68%;
-            background-color: #fff;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            padding: 20px;
-            font-family: 'Courier New', Courier, monospace;
-            color: #020e44;
-            margin-top: 10px;
-        }
-
-        #discourseOutput {
-            width: calc(100% - 20px);
-            height: 100px;
-            font-size: 1.3em;
-            resize: both;
+#discourseOutput {
+    width: calc(100% - 20px);
+    height: 100px;
+    font-size: 1.3em;
+    resize: both;
     overflow: auto;
-            box-sizing: border-box;
-            margin-bottom: 15px;
-            
-            border: 1px solid #ccc;
-            border-radius: 8px;
-            padding: 10px;
-        }
+    box-sizing: border-box;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    padding: 10px;
+}
 
-        @media only screen and (max-width: 800px) {
-            .textbox-container {
-                max-width: 100% ;
-            }
-            #discourseOutputContainer {
-                max-width: 100% !important;
+#loading-spinner {
+    display: none;
+    position: absolute;
+    top: calc(50% + 60px);
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+@media only screen and (max-width: 920px) {
+    #loading-spinner {
+        display: none !important;
     }
-                button {
-            width: 100% !important; 
-            margin-top: 0px; 
-        }
-        }
-        .highlight {
-        background-color: rgb(255, 255, 0);
-        }
-        .highlightg{
-            background-color: rgb(210, 210, 205);
-        }
+    .textbox-container {
+        max-width: 100%;
+    }
+    #discourseOutputContainer {
+        max-width: 100% !important;
+    }
+    button {
+        width: 100% !important;
+        margin-top: 0px;
+    }
+}
+
+.highlight {
+    background-color: rgb(255, 255, 0);
+}
+
+.highlightg {
+    background-color: rgb(210, 210, 205);
+}
 
 .output-div {
-        width: calc(100% - 20px);
-        height: 100px;
-        font-size: 2em;
-        box-sizing: border-box;
-        margin-bottom: 15px;
-        border: 1px solid #ccc;
-        border-radius: 8px;
-        padding: 10px;
-        overflow-y: auto;
-    }
-    #discourseButton {
+    width: calc(100% - 20px);
+    height: 100px;
+    font-size: 2em;
+    box-sizing: border-box;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    padding: 10px;
+    overflow-y: auto;
+}
+
+#discourseButton {
     font-size: 1.2em;
     padding: 1em;
     height: 36%;
-    padding: 20px;
-    width: calc(100% - 85%);
+    padding: 10px;
+    width: calc(100% - 80%);
     background-color: #74da74;
     color: #000000;
     align-items: center;
@@ -162,7 +177,7 @@
     border-radius: 4px;
     cursor: pointer;
     transition: background-color 0.3s;
-    margin-top: 20px; /* Adjusted margin to move the button slightly higher */
+    margin-top: 20px;
     outline: none;
 }
 
@@ -180,6 +195,13 @@
             </form>
         </div>
         <button type="button" id="processButton" onclick="processInput()">Simplify</button>
+        <div id="loading-spinner"></div>
+        <script>
+            // Create a new Spinner instance
+            var spinner = new Spinner().spin();
+            // Append the spinner to the container
+            document.getElementById('loading-spinner').appendChild(spinner.el);
+        </script>
         <div class="textbox-container">
             <label for="output"><font size=5>Simplified Sentence:</font></label>
             <textarea id="output" ></textarea>
@@ -199,19 +221,23 @@
 
     <script>
         function processInput() {
-            var inputText = document.getElementById("inputText").value;
+    var inputText = document.getElementById("inputText").value;
+    document.getElementById('loading-spinner').style.display = 'block';
 
-            // Make an AJAX request to the server to process the input
-            var xhr = new XMLHttpRequest();
-            xhr.open('POST', '/process_input', true);
-            xhr.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded');
-            xhr.onload = function () {
-                if (xhr.status === 200) {
-                    document.getElementById("output").value = xhr.responseText;
-                }
-            };
-            xhr.send('inputText=' + encodeURIComponent(inputText));
+    // Make an AJAX request to the server to process the input
+    var xhr = new XMLHttpRequest();
+    xhr.open('POST', '/process_input', true);
+    xhr.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded');
+    xhr.onload = function () {
+        if (xhr.status === 200) {
+            document.getElementById("output").value = xhr.responseText;
         }
+        // Hide the spinner after receiving the response
+        document.getElementById('loading-spinner').style.display = 'none';
+    };
+    xhr.send('inputText=' + encodeURIComponent(inputText));
+}
+
 
         function processDiscourse() {
         var output = document.getElementById("output").value;
